Bug #21531   file_exists() and other filestat functions throw errors when in safe mode and file/directory does not exist. Extended php_checkuid function to add "flags" field via rename to php_checkuid_ex with alias for BC in functions that do want safe mode errors thrown.